# DIY_ESP32_Quadrocopter

./: .gitignore  README.md
3DPrintableParts/: DroneBody.STL  DroneBody.ast
AdvancedQuadrocopterFirmware/: CMakeLists.txt  sdkconfig
AdvancedQuadrocopterFirmware/main/: CMakeLists.txt  Kconfig.projbuild  QuadrocopterBTCtrl.cpp  QuadrocopterBTCtrl.h  QuadrocopterMotorControl.cpp  QuadrocopterMotorControl.h  main.cpp
AndroidApp/: build.gradle
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/com/example/androidapp/: MainActivity.kt
AndroidApp/app/src/main/res/layout/: activitymain.xml
AndroidApp/app/src/main/res/values/: themes.xml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
Firmware/EntryPoint/: EntryPoint.ino
Schematic_and_PCB/: Drone.kicad_pcb  Drone.kicad_prl  Drone.kicad_pro  Drone.kicad_sch
